// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DistributionCard DistributionChart renders 1`] = `
<div>
  <div
    class="card-body align-center"
  >
    <div />
  </div>
  <div
    class="card-footer"
  >
    <a
      class="button-root btn btn-outline-borderless btn-sm btn-outline-secondary"
      href="test/:id"
    >
      Explore Breakdown
      <svg
        class="lexicon-icon lexicon-icon-angle-right-small icon-root ml-2"
        role="presentation"
      >
        <use
          href="#angle-right-small"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`DistributionCard DistributionChart renders empty state via props with noResultsRenderer 1`] = `
<div>
  <div
    class="card-body align-center"
  >
    <div>
      <div>
        empty state
      </div>
    </div>
  </div>
  <div
    class="card-footer"
  >
    <a
      class="button-root btn btn-outline-borderless btn-sm btn-outline-secondary"
      href="test/:id"
    >
      Explore Breakdown
      <svg
        class="lexicon-icon lexicon-icon-angle-right-small icon-root ml-2"
        role="presentation"
      >
        <use
          href="#angle-right-small"
        />
      </svg>
    </a>
  </div>
</div>
`;
